Fixed several bugs and implemented missing features. Build ready for release.

--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -548,6 +548,11 @@
     </Grid>
     <controls:MetroWindow.WindowCommands>
         <controls:WindowCommands>
+            <Button Name="TruncateTable" Click="Button_Click">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Truncate Table" VerticalAlignment="Center"/>
+                </StackPanel>
+            </Button>
             <Button Name="ExportDBC" Click="Button_Click">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Export To Spell.dbc" VerticalAlignment="Center"/>
