--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -22,8 +22,9 @@
         <TabControl Name="MainTabControl" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,0,0" Height="750" Width="1300" SelectionChanged="TabControl_SelectionChanged">
             <TabItem Header="Select Spell">
                 <Grid>
-                    <Label Content="Go to spell:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="453,0,0,0"/>
-                    <c:ThreadSafeTextBox x:Name="NavigateToSpell" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="523,0,0,0" Width="120" TextWrapping="Wrap" KeyDown="_KeyDown"/>
+                    <Label Content="Go to spell:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="473,40,0,0"/>
+                    <c:ThreadSafeTextBox x:Name="NavigateToSpell" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="548,40,0,0" Width="120" TextWrapping="Wrap" KeyDown="_KeyDown"/>
+                    <Label Name="SpellsLoadedLabel" Content="No spells loaded." VerticalAlignment="Top" HorizontalAlignment="Left" Margin="448,9,0,0"/>
                     <ListBox Name="SelectSpell" VerticalAlignment="Top" HorizontalAlignment="Left" Height="456" Width="420" SelectionChanged="SelectSpell_SelectionChanged"/>
                     <TabControl VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,460,0,0" Height="200" Width="1270">
                         <TabItem Header="English">
@@ -548,14 +549,19 @@
     </Grid>
     <controls:MetroWindow.WindowCommands>
         <controls:WindowCommands>
-            <Button Name="TruncateTable" Click="Button_Click">
+            <Button Name="ImportDBC" Click="ImportSpellDbcButton">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Truncate Table" VerticalAlignment="Center"/>
+                    <TextBlock Text="Import Spell.dbc to MySQL" VerticalAlignment="Center"/>
                 </StackPanel>
             </Button>
             <Button Name="ExportDBC" Click="Button_Click">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Export To Spell.dbc" VerticalAlignment="Center"/>
+                    <TextBlock Text="Export MySQL to Spell.dbc" VerticalAlignment="Center"/>
+                </StackPanel>
+            </Button>
+            <Button Name="TruncateTable" Click="Button_Click">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Truncate Table" VerticalAlignment="Center"/>
                 </StackPanel>
             </Button>
             <Button Name="InsertANewRecord" Click="Button_Click">
