Early implementation of a spell string parser: - I have started working my way through Vel's tag documentation to create a spell string parser. When selecting a spell it will attempt to parse the spell description into a real string format with all the spell tags parsed. e.g:  will be converted into the spells duration. - I am currently testing two ways:     A) All spells in the spell DBC are parsed on startup, and then discarded. This is used for debugging and will be removed with a release.     B) When a spell is selected its parsed spell description is displayed on the GUI.

--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -28,6 +28,8 @@
                     <Label Content="Filter by name:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="455,83,0,0"/>
                     <c:ThreadSafeTextBox x:Name="FilterSpellNames" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="548,83,0,0" Width="120" TextWrapping="NoWrap" KeyDown="_KeyDown" KeyUp="_KeyUp"/>
 
+                    <c:ThreadSafeTextBox x:Name="SpellDescriptionGen" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="918,337,0,0" Height="118" Width="240" TextWrapping="Wrap" AcceptsReturn="True"/>
+
                     <Label Name="SpellsLoadedLabel" Content="No spells loaded." VerticalAlignment="Top" HorizontalAlignment="Left" Margin="448,9,0,0"/>
                     <ListBox Name="SelectSpell" VerticalAlignment="Top" HorizontalAlignment="Left" Height="456" Width="420" SelectionChanged="SelectSpell_SelectionChanged"/>
                     <TabControl VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,460,0,0" Height="200" Width="1270">
