--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -31,7 +31,7 @@
                     <Label Name="SpellsLoadedLabel" Content="No spells loaded." VerticalAlignment="Top" HorizontalAlignment="Left" Margin="448,9,0,0"/>
                     <ListBox Name="SelectSpell" VerticalAlignment="Top" HorizontalAlignment="Left" Height="456" Width="420" SelectionChanged="SelectSpell_SelectionChanged"/>
                     <TabControl VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,460,0,0" Height="200" Width="1270">
-                        <TabItem Header="English">
+                        <TabItem x:Name="TabItem_English" Header="English">
                             <Grid>
                                 <Label Content="Spell Name:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="105,3,0,0"/>
                                 <c:ThreadSafeTextBox x:Name="SpellName0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="118" Width="240" Margin="22,29,0,0" TextWrapping="Wrap" AcceptsReturn="True"/>
@@ -43,7 +43,7 @@
                                 <c:ThreadSafeTextBox x:Name="SpellDescription0" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="912,29,0,0" Height="118" Width="240" TextWrapping="Wrap" AcceptsReturn="True"/>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="Korean">
+                        <TabItem Header="Korean" x:Name="TabItem_Korean">
                             <Grid>
                                 <Label Content="Spell Name:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="105,3,0,0"/>
                                 <c:ThreadSafeTextBox x:Name="SpellName1" VerticalAlignment="Top" HorizontalAlignment="Left" Height="118" Width="240" Margin="22,29,0,0" TextWrapping="Wrap" AcceptsReturn="True"/>
@@ -55,7 +55,7 @@
                                 <c:ThreadSafeTextBox x:Name="SpellDescription1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="912,29,0,0" Height="118" Width="240" TextWrapping="Wrap" AcceptsReturn="True"/>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="French">
+                        <TabItem Header="French" x:Name="TabItem_French">
                             <Grid>
                                 <Label Content="Spell Name:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="105,3,0,0"/>
                                 <c:ThreadSafeTextBox x:Name="SpellName2" VerticalAlignment="Top" HorizontalAlignment="Left" Height="118" Width="240" Margin="22,29,0,0" TextWrapping="Wrap" AcceptsReturn="True"/>
@@ -67,7 +67,7 @@
                                 <c:ThreadSafeTextBox x:Name="SpellDescription2" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="912,29,0,0" Height="118" Width="240" TextWrapping="Wrap" AcceptsReturn="True"/>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="Deutsch">
+                        <TabItem Header="Deutsch" x:Name="TabItem_Deutsch">
                             <Grid>
                                 <Label Content="Spell Name:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="105,3,0,0"/>
                                 <c:ThreadSafeTextBox x:Name="SpellName3" VerticalAlignment="Top" HorizontalAlignment="Left" Height="118" Width="240" Margin="22,29,0,0" TextWrapping="Wrap" AcceptsReturn="True"/>
@@ -79,7 +79,7 @@
                                 <c:ThreadSafeTextBox x:Name="SpellDescription3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="912,29,0,0" Height="118" Width="240" TextWrapping="Wrap" AcceptsReturn="True"/>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="Chinese">
+                        <TabItem x:Name="TabItem_Chinese" Header="Chinese">
                             <Grid>
                                 <Label Content="Spell Name:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="105,3,0,0"/>
                                 <c:ThreadSafeTextBox x:Name="SpellName4" VerticalAlignment="Top" HorizontalAlignment="Left" Height="118" Width="240" Margin="22,29,0,0" TextWrapping="Wrap" AcceptsReturn="True"/>
@@ -91,7 +91,7 @@
                                 <c:ThreadSafeTextBox x:Name="SpellDescription4" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="912,29,0,0" Height="118" Width="240" TextWrapping="Wrap" AcceptsReturn="True"/>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="Taiwanese">
+                        <TabItem Header="Taiwanese" x:Name="TabItem_Taiwanese">
                             <Grid>
                                 <Label Content="Spell Name:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="105,3,0,0"/>
                                 <c:ThreadSafeTextBox x:Name="SpellName5" VerticalAlignment="Top" HorizontalAlignment="Left" Height="118" Width="240" Margin="22,29,0,0" TextWrapping="Wrap" AcceptsReturn="True"/>
@@ -103,7 +103,7 @@
                                 <c:ThreadSafeTextBox x:Name="SpellDescription5" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="912,29,0,0" Height="118" Width="240" TextWrapping="Wrap" AcceptsReturn="True"/>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="Mexican">
+                        <TabItem Header="Mexican" x:Name="TabItem_Mexican">
                             <Grid>
                                 <Label Content="Spell Name:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="105,3,0,0"/>
                                 <c:ThreadSafeTextBox x:Name="SpellName6" VerticalAlignment="Top" HorizontalAlignment="Left" Height="118" Width="240" Margin="22,29,0,0" TextWrapping="Wrap" AcceptsReturn="True"/>
@@ -115,7 +115,7 @@
                                 <c:ThreadSafeTextBox x:Name="SpellDescription6" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="912,29,0,0" Height="118" Width="240" TextWrapping="Wrap" AcceptsReturn="True"/>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="Portuguese">
+                        <TabItem Header="Portuguese" x:Name="TabItem_Portuguese">
                             <Grid>
                                 <Label Content="Spell Name:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="105,3,0,0"/>
                                 <c:ThreadSafeTextBox x:Name="SpellName7" VerticalAlignment="Top" HorizontalAlignment="Left" Height="118" Width="240" Margin="22,29,0,0" TextWrapping="Wrap" AcceptsReturn="True"/>
@@ -127,7 +127,7 @@
                                 <c:ThreadSafeTextBox x:Name="SpellDescription7" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="912,29,0,0" Height="118" Width="240" TextWrapping="Wrap" AcceptsReturn="True"/>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="Russian">
+                        <TabItem Header="Russian" x:Name="TabItem_Russian">
                             <Grid>
                                 <Label Content="Spell Name:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="105,3,0,0"/>
                                 <c:ThreadSafeTextBox x:Name="SpellName8" VerticalAlignment="Top" HorizontalAlignment="Left" Height="118" Width="240" Margin="22,29,0,0" TextWrapping="Wrap" AcceptsReturn="True"/>
