--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -261,11 +261,11 @@
                             <c:ThreadSafeTextBox x:Name="EffectDieSides3" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="632,100,0,0" TextWrapping="Wrap" Width="90"/>
                             <Label Content="Targets:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="133,160,0,0"/>
                             <ScrollViewer Margin="7,186,962,38">
-                                <Grid Name="TargetEditorGrid"/>
+                                <StackPanel Name="TargetEditorGrid"/>
                             </ScrollViewer>
                             <Label Content="Procs:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="587,160,0,0"/>
                             <ScrollViewer Margin="456,186,513,38">
-                                <Grid Name="ProcEditorGrid"/>
+                                <StackPanel Name="ProcEditorGrid"/>
                             </ScrollViewer>
                             <Label Content="Proc Charges:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="773,160,0,0"/>
                             <c:ThreadSafeTextBox x:Name="ProcCharges" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="768.5,186,0,0" Width="90" TextWrapping="Wrap"/>
@@ -467,10 +467,10 @@
                     <c:ThreadSafeComboBox x:Name="EquippedItemClass" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="339,61,0,0" Width="120" SelectionChanged="ComboBox_SelectionChanged"/>
                     <Label Content="Equipped Item Inventory Type:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="964,35,0,0"/>
                     <ScrollViewer Margin="909,61,99,346">
-                        <Grid Name="EquippedItemInventoryTypeGrid" IsEnabled="False"/>
+                        <StackPanel Name="EquippedItemInventoryTypeGrid" IsEnabled="False"/>
                     </ScrollViewer>
                     <ScrollViewer Margin="607,61,413,346">
-                        <Grid x:Name="EquippedItemSubClassGrid" IsEnabled="False"/>
+                        <StackPanel x:Name="EquippedItemSubClassGrid" IsEnabled="False"/>
                     </ScrollViewer>
                     <Label Content="Equipped Item SubClass:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="666,35,0,0"/>
                 </Grid>
@@ -482,15 +482,15 @@
                             <Grid>
                                 <Label Content="Interrupt Flags:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="125,10,0,0"/>
                                 <ScrollViewer Margin="10,36,934,441" ScrollViewer.VerticalScrollBarVisibility="Disabled">
-                                    <Grid Name="InterruptFlagsGrid"/>
+                                    <StackPanel Name="InterruptFlagsGrid"/>
                                 </ScrollViewer>
                                 <Label Content="Aura Interrupt Flags:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="495,10,0,0"/>
                                 <ScrollViewer Margin="395,36,549,0">
-                                    <Grid Name="AuraInterruptFlagsGrid"/>
+                                    <StackPanel Name="AuraInterruptFlagsGrid"/>
                                 </ScrollViewer>
                                 <Label Content="Channel Interrupt Flags:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="892,10,0,0"/>
                                 <ScrollViewer Margin="799,36,145,100" ScrollViewer.VerticalScrollBarVisibility="Disabled">
-                                    <Grid Name="ChannelInterruptFlagsGrid"/>
+                                    <StackPanel Name="ChannelInterruptFlagsGrid"/>
                                 </ScrollViewer>
                             </Grid>
                         </TabItem>
@@ -498,35 +498,35 @@
                             <Grid>
                                 <Label Content="Attributes:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="92,8,0,0"/>
                                 <ScrollViewer Margin="10,35,939,394">
-                                    <Grid Name="Attributes1"/>
+                                    <StackPanel Name="Attributes1"/>
                                 </ScrollViewer>
                                 <Label Content="Attributes Ex:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="400,8,0,0"/>
                                 <ScrollViewer Margin="326,35,627,394">
-                                    <Grid Name="Attributes2"/>
+                                    <StackPanel Name="Attributes2"/>
                                 </ScrollViewer>
                                 <Label Content="Attributes Ex2:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="710,8,0,0"/>
                                 <ScrollViewer Margin="638,35,310,394">
-                                    <Grid Name="Attributes3"/>
+                                    <StackPanel Name="Attributes3"/>
                                 </ScrollViewer>
                                 <Label Content="Attributes Ex3:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1027,9,0,0"/>
                                 <ScrollViewer Margin="955,35,10,394">
-                                    <Grid Name="Attributes4"/>
+                                    <StackPanel Name="Attributes4"/>
                                 </ScrollViewer>
                                 <Label Content="Attributes Ex4:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="83,218,0,0"/>
                                 <ScrollViewer Margin="10,244,940,185">
-                                    <Grid Name="Attributes5"/>
+                                    <StackPanel Name="Attributes5"/>
                                 </ScrollViewer>
                                 <Label Content="Attributes Ex5:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="397,218,0,0"/>
                                 <ScrollViewer Margin="325,244,627,185">
-                                    <Grid Name="Attributes6"/>
+                                    <StackPanel Name="Attributes6"/>
                                 </ScrollViewer>
                                 <Label Content="Attributes Ex6:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="708,218,0,0"/>
                                 <ScrollViewer Margin="638,244,310,185">
-                                    <Grid Name="Attributes7"/>
+                                    <StackPanel Name="Attributes7"/>
                                 </ScrollViewer>
                                 <Label Content="Attributes Ex7:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="1025,218,0,0"/>
                                 <ScrollViewer Margin="955,244,10,185">
-                                    <Grid Name="Attributes8"/>
+                                    <StackPanel Name="Attributes8"/>
                                 </ScrollViewer>
                             </Grid>
                         </TabItem>
@@ -534,11 +534,11 @@
                             <Grid>
                                 <Label Content="Creature Type:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="174.5,49,0,0"/>
                                 <ScrollViewer Margin="62,75,882,259">
-                                    <Grid Name="TargetCreatureType"/>
+                                    <StackPanel Name="TargetCreatureType"/>
                                 </ScrollViewer>
                                 <Label Content="Stances:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="569.5,49,0,0"/>
                                 <ScrollViewer Margin="440,75,504,259">
-                                    <Grid Name="StancesGrid"/>
+                                    <StackPanel Name="StancesGrid"/>
                                 </ScrollViewer>
                             </Grid>
                         </TabItem>
